tests/errors/lex_char3.java
public class lex_char3 {
public static	char a = 'a;
}
